# aoc2022

./: LICENSE
day01/: part1.py
day02/: part1.py
day03/: part1.py  part2.py
day04/: part1.py  part2.py
day05/: test_day5.py
day07/: test_day7.py
day08/: test_day8.py
day09/: test_day9.py
day1/: part2.py
day10/: day10.py  test_day10.py
day11/: day11.py  test_day11.py
day13/: day13.py  test_day13.py
day17/: day17.py  test_day17.py
day18/: day18.py  day18_twodim.py
day2/: part2.py
day20/: CMakeLists.txt  day20.cpp  day20.h  day20_main.cpp  test_day20.cpp
day21/: CMakeLists.txt  day21.cpp  day21.h  day21_main.cpp  test_day21.cpp
day23/: CMakeLists.txt  day23.cpp  day23.h  day23_main.cpp  test_day23.cpp
day5/: day5.py  part1.py  part2.py  test_part1.py
day6/: day6.py  test_day6.py
day7/: day7.py
day8/: day8.py  test_day8.py
day9/: day9.py
